CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(mytar VERSION 1.0 DESCRIPTION "like tar program")

ADD_LIBRARY(mytar STATIC mytar.c)
SET_TARGET_PROPERTIES(mytar PROPERTIES PUBLIC_HEADER mytar.h)

TARGET_INCLUDE_DIRECTORIES(mytar PRIVATE .)

ADD_EXECUTABLE(myt main.c)

TARGET_LINK_LIBRARIES(myt PUBLIC mytar)

TARGET_INCLUDE_DIRECTORIES(myt PUBLIC .)
