CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(mytar VERSION 1.0 DESCRIPTION "like tar program")

SET(MYTAR_VERSION_MAJOR 1)
SET(MYTAR_VERSION_MINOR 0)

ADD_LIBRARY(mytar STATIC mytar.c)
SET_TARGET_PROPERTIES(mytar PROPERTIES PUBLIC_HEADER mytar.h)
TARGET_INCLUDE_DIRECTORIES(mytar PRIVATE "${PROJECT_SOURCE_DIR}")

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/Configure.h.in"
	"${PROJECT_SOURCE_DIR}/Configure.h"
	@ONLY
)

OPTION(USE_MYTAR "use my tar" ON)

if(USE_MYTAR)
	include_directories("${PROJECT_SOURCE_DIR}")
	set (EXTRA_LIBS ${EXTRA_LIBS} mytar)
endif(USE_MYTAR)

ADD_EXECUTABLE(myt main.c)

TARGET_LINK_LIBRARIES(myt PUBLIC ${EXTRA_LIBS})

TARGET_INCLUDE_DIRECTORIES(myt PUBLIC .)
